--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 file:///C:/Users/u0193605/MY%20FOLDER%20for%20SCHOOL/gitHubForClassAssignments/exerHtmlBasics-main/blog.html
 
+blah blah blah
+
 <!DOCTYPE html>
 <html>
     <head>
